Scrollbar issue fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,6 +711,7 @@ main {
     position: relative;
     padding: 15px;
     margin: 15px 12px;
+    height: 100%;
     border: 1px solid var(--jet);
     border-radius: 14px;
     box-shadow: var(--shadow-5);
@@ -718,6 +719,11 @@ main {
     opacity: 0;
     transition: var(--transition-1);
     z-index: 2;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    overscroll-behavior-inline: contain;
+    scroll-snap-type: inline mandatory;
+    scroll-padding-inline: 25px;
 }
 
 .modal-container.active .testimonials-modal {
